app/css/pages/profile/profile-page.scss
.profile-page {
  margin-top: 20px;
  margin-bottom: 68px;

  &__main {
    margin-top: 30px;
    display: flex;

    @include mobile {
      display: block;
    }
  }

  &__title {
    font-family: 'Montserrat', sans-serif;
    margin-top: 45px;
    font-weight: bold;
    font-size: 32px;
    line-height: 39px;

    @include mobile {
      display: none;
    }
  }

  &__left {
    flex: 0 0 280px;
    max-width: 280px;

    @include mobile {
      margin-top: 40px;
      max-width: none;
    }
  }

  &__right {
    margin-left: 20px;
    flex: 1 1 580px;
    max-width: 580px;

    @include smallTablet {
      flex: 1 1 auto;
      max-width: none;
    }


    @include mobile {
      margin-top: 20px;
      margin-left: 0;
      max-width: none;
    }
  }
}

